<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"

        android:contentDescription="@string/logotipo_da_infnet"
        android:background="@android:color/background_dark" />

    <Button
        android:id="@+id/bt_load_img"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="callLoadImage"
        android:layout_marginTop="60dp"
        android:text="@string/carregar_imagem" />

    <Button
        android:id="@+id/bt_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callWriteOnExternalStorage"
        android:text="@string/escrever_no_armazenamento_externo" />

    <Button
        android:id="@+id/bt_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callReadFromExternalStorage"
        android:text="@string/ler_no_armazenamento_externo" />

    <Button
        android:id="@+id/bt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callAccessLocation"
        android:text="@string/acessar_a_localizacao" />
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>